--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,11 @@
 spring.application.name=KmrlInductionPlanningApplication
+
+spring.datasource.url=jdbc:mysql://localhost:3306/metro
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.datasource.username=root
+spring.datasource.password=Atharva123*
+
+
+spring.jpa.hibernate.ddl-auto=update
+
+spring.jpa.show-sql: true
