--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,7 +5,7 @@ spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.datasource.username=root
 spring.datasource.password=Atharva123*
 
-
+spring.jpa.hibernate.globally_quoted_identifiers=true
 spring.jpa.hibernate.ddl-auto=update
 
 spring.jpa.show-sql: true
