--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,5 +7,6 @@ spring.datasource.password=Atharva123*
 
 spring.jpa.hibernate.globally_quoted_identifiers=true
 spring.jpa.hibernate.ddl-auto=update
+spring.autoconfigure.exclude=org.springframework.boot.autoconfigure.security.servlet.SecurityAutoConfiguration
 
 spring.jpa.show-sql: true
