--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 spring.application.name=KmrlInductionPlanningApplication
 
-#spring.datasource.url=jdbc:mysql://sih:Sih8080!@13.233.112.190:3306/kmrl
+#spring.datasource.url=jdbc:mysql://sih:Sih8080!@3.108.227.145:3306/kmrl
 ##spring.datasource.url=jdbc:mysql://localhost:3306/metro
 #spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 #spring.datasource.username=sih
@@ -17,3 +17,34 @@ spring.jpa.hibernate.ddl-auto=update
 spring.autoconfigure.exclude=org.springframework.boot.autoconfigure.security.servlet.SecurityAutoConfiguration
 
 spring.jpa.show-sql: true
+
+
+
+
+
+
+
+
+
+
+
+#spring.application.name=KmrlInductionPlanningApplication
+#
+## Correct database configuration
+#spring.datasource.url=jdbc:mysql://13.233.112.190:3306/kmrl
+#spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+#spring.datasource.username=sih
+#spring.datasource.password=Sih8080!
+#
+## Add these important configurations
+#spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
+#spring.jpa.hibernate.globally_quoted_identifiers=true
+#spring.jpa.hibernate.ddl-auto=update
+#spring.jpa.show-sql=true
+#
+## Connection pool settings (optional but recommended)
+#spring.datasource.hikari.connection-timeout=60000
+#spring.datasource.hikari.maximum-pool-size=10
+#
+## Disable security auto-configuration
+#spring.autoconfigure.exclude=org.springframework.boot.autoconfigure.security.servlet.SecurityAutoConfiguration
