--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,15 +1,15 @@
 spring.application.name=KmrlInductionPlanningApplication
 
-#spring.datasource.url=jdbc:mysql://sih:Sih8080!@3.108.227.145:3306/kmrl
-##spring.datasource.url=jdbc:mysql://localhost:3306/metro
-#spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-#spring.datasource.username=sih
-#spring.datasource.password=Sih8080!
+spring.datasource.url=jdbc:mysql://sih:Sih8080!@13.201.96.108:3306/kmrl
 
-spring.datasource.url=jdbc:mysql://${DB_HOST:localhost}:${DB_PORT:3306}/${DB_NAME:metro}
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.datasource.username=${DB_USERNAME:root}
-spring.datasource.password=${DB_PASSWORD:Atharva123*}
+spring.datasource.username=sih
+spring.datasource.password=Sih8080!
+
+##spring.datasource.url=jdbc:mysql://${DB_HOST:localhost}:${DB_PORT:3306}/${DB_NAME:metro}
+##spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+##spring.datasource.username=${DB_USERNAME:root}
+##spring.datasource.password=${DB_PASSWORD:Atharva123*}
 
 
 spring.jpa.hibernate.globally_quoted_identifiers=true
